# netconf-client

./: Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs  read.rs  session.rs  write.rs
src/transport/: mod.rs  ssh.rs
test_data/: get-config.xml
