[package]
name = "mypipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = "3.1.18"
crossbeam = "0.8.1"
crossterm = "0.14.2"
ssh2 = "0.9.1"
env_logger = "0.9.0"
log = "0.4.17"
memchr = "2.5.0"
memmem = "0.1.1"
